--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,9 @@
 {
-    "deno.enable": true
-}
+    "deno.enable": true,
+    "deno.lint": true,
+    "deno.unstable": [],
+    "deno.enablePaths": [
+      "supabase"
+    ],
+    "deno.importMap": "./supabase/functions/import_map.json"
+  }
